--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,63 @@
+# Dependencies
 node_modules
-.DS_Store
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
+build
 *.local
-count.txt
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+coverage
+*.lcov
+.nyc_output
+
+# Firebase
+.firebase
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+# Note: .firebaserc should be committed (contains project ID)
+
+# TanStack (legacy - can be removed if you want)
 .nitro
 .tanstack
-.wrangler
 .output
 .vinxi
-todos.json
-.vscode
+
+# Misc
+*.log
+*.cache
+.cache
+.temp
+.tmp
+
+# OS files
+Thumbs.db
+.DS_Store
